Update styles for responsiveness and layout

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   font-weight: 600;
 }
 body{
-  background: #1f2020;
+  background: #1E1e1E;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   min-height: 100vh;
   margin: 0;
